--- a/5_Modules/1_intro.ipynb
+++ b/5_Modules/1_intro.ipynb
@@ -4,134 +4,281 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-06-19T15:06:56.594122Z",
-     "start_time": "2025-06-19T15:06:56.480935Z"
-    }
+    "collapsed": true
    },
    "source": [
     "import math\n",
     "print(math.sqrt(16))\n"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T15:07:34.571934Z",
-     "start_time": "2025-06-19T15:07:34.542534Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from math import *\n",
     "print(sqrt(16))\n"
    ],
    "id": "999030bafeb61930",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T15:11:46.465811Z",
-     "start_time": "2025-06-19T15:11:46.388504Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from package.maths import *\n",
     "print(addition(1,6))"
    ],
    "id": "7618b3201a61d68f",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-19T15:12:06.643847Z",
-     "start_time": "2025-06-19T15:12:06.637524Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from package import maths\n",
-    "print(maths.addition(1,6))"
+    "print(maths.addition(1,6))\n",
+    "from package import printerrs\n",
+    "printerrs.printt(5)"
    ],
    "id": "198fbcac6342d45b",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7\n"
-     ]
-    }
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "from package.subpackage import new_multi\n",
+    "print(new_multi.new_multiply(2,3))"
    ],
-   "execution_count": 6
+   "id": "9b21d370d053fd86",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import random\n",
+    "print(random.randint(1,10))\n",
+    "print(random.choice([\"apple\",\"banana\",\"orange\"]))"
+   ],
+   "id": "76bdaff6d284e0af",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import array\n",
+    "print(array.array('i',[1,2,3,4,5]))"
+   ],
+   "id": "7b7c0407f0eb0f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "File and Directory Access",
+   "id": "3bb2e86f0eb72e67"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import os\n",
+    "print(os.getcwd())  #current working directory\n",
+    "os.mkdir('sample_empty') #to create a directory"
+   ],
+   "id": "600ce62c6728dc01",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-19T15:24:50.219007Z",
-     "start_time": "2025-06-19T15:24:50.187232Z"
+     "end_time": "2025-06-19T18:46:20.949489Z",
+     "start_time": "2025-06-19T18:46:20.939153Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from package import *\n",
-    "print(maths.addition(1,6))\n",
-    "print(printerrs.printt(5))"
+    "#high level operation on files and collection of files\n",
+    "import shutil\n",
+    "shutil.copyfile('source', 'destination')"
    ],
-   "id": "5f50cc5a286eafd6",
+   "id": "19cc6c0b45f763d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'destination'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 101
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T19:16:56.280143Z",
+     "start_time": "2025-06-19T19:16:56.266957Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## Data Serialization\n",
+    "import json\n",
+    "data={'name':'Krish','age':25}\n",
+    "\n",
+    "json_str=json.dumps(data)\n",
+    "print(json_str)\n",
+    "print(type(json_str))\n",
+    "\n",
+    "parsed_data=json.loads(json_str)\n",
+    "print(parsed_data)\n",
+    "print(type(parsed_data))"
+   ],
+   "id": "f12753714de70845",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'printerrs' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[43]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpackage\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m *\n\u001B[32m      2\u001B[39m \u001B[38;5;28mprint\u001B[39m(maths.addition(\u001B[32m1\u001B[39m,\u001B[32m6\u001B[39m))\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28mprint\u001B[39m(\u001B[43mprinterrs\u001B[49m.printt(\u001B[32m5\u001B[39m))\n",
-      "\u001B[31mNameError\u001B[39m: name 'printerrs' is not defined"
+      "{\"name\": \"Krish\", \"age\": 25}\n",
+      "<class 'str'>\n",
+      "{'name': 'Krish', 'age': 25}\n",
+      "<class 'dict'>\n"
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 103
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T19:36:25.049059Z",
+     "start_time": "2025-06-19T19:36:25.039516Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import csv\n",
+    "with open(\"example.csv\",mode='w',newline='')as file:\n",
+    "    writer=csv.writer(file)\n",
+    "    writer.writerow(['name','age'])\n",
+    "    writer.writerow(['Krish','25'])\n",
+    "    writer.writerow(['Sachin','31'])\n",
+    "with open(\"example.csv\",mode='r',newline='')as file:\n",
+    "    reader=csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)"
+   ],
+   "id": "1744b041557036d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'age']\n",
+      "['Krish', '25']\n",
+      "['Sachin', '31']\n"
+     ]
+    }
+   ],
+   "execution_count": 108
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T19:38:33.981510Z",
+     "start_time": "2025-06-19T19:38:33.966956Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from datetime import datetime,timedelta\n",
+    "now=datetime.now()\n",
+    "print(now)\n",
+    "yesterday=now-timedelta(days=1)"
+   ],
+   "id": "83d426df81c262ad",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-06-20 01:08:33.976900\n"
+     ]
+    }
+   ],
+   "execution_count": 110
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T19:47:56.144478Z",
+     "start_time": "2025-06-19T19:47:54.117864Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import time\n",
+    "print(time.time())\n",
+    "time.sleep(2)\n",
+    "print(time.time())"
+   ],
+   "id": "fc438127659083d6",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1750362474.139238\n",
+      "1750362476.1423962\n"
+     ]
+    }
+   ],
+   "execution_count": 111
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-19T19:48:13.100285Z",
+     "start_time": "2025-06-19T19:48:13.071462Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "## Regular expresiion\n",
+    "import re\n",
+    "\n",
+    "pattern=r'\\d+'\n",
+    "text='There are 123 apples 456'\n",
+    "match=re.search(pattern,text)\n",
+    "print(match.group())"
+   ],
+   "id": "e6d0d7fe9c8c6e60",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    }
+   ],
+   "execution_count": 112
   }
  ],
  "metadata": {
