--- a/3_functions/1_functions.ipynb
+++ b/3_functions/1_functions.ipynb
@@ -361,7 +361,7 @@
     "    return re.match(pattern, email) is not None\n",
     "\n",
     "# Calling the function\n",
-    "print(is_valid_email(\"test@example.com\"))  # Output: True\n",
+    "print(is_valid_email(\"test@example.txt.com\"))  # Output: True\n",
     "print(is_valid_email(\"invalid-email\"))  # Output: False"
    ],
    "id": "c4a1b78371ece687"
