--- a/4_Modules/1_intro.ipynb
+++ b/4_Modules/1_intro.ipynb
@@ -174,12 +174,12 @@
    "cell_type": "code",
    "source": [
     "import csv\n",
-    "with open(\"example.csv\",mode='w',newline='')as file:\n",
+    "with open(\"example.txt.csv\",mode='w',newline='')as file:\n",
     "    writer=csv.writer(file)\n",
     "    writer.writerow(['name','age'])\n",
     "    writer.writerow(['Krish','25'])\n",
     "    writer.writerow(['Sachin','31'])\n",
-    "with open(\"example.csv\",mode='r',newline='')as file:\n",
+    "with open(\"example.txt.csv\",mode='r',newline='')as file:\n",
     "    reader=csv.reader(file)\n",
     "    for row in reader:\n",
     "        print(row)"
