--- a/2_Data Structures/2_Lists.ipynb
+++ b/2_Data Structures/2_Lists.ipynb
@@ -44,17 +44,91 @@
    "cell_type": "code",
    "source": [
     "lists=[1,2,\"Sachin\",\"Goyal\",3.14]\n",
-    "print(lists,type(lists))"
+    "print(lists,type(lists))\n",
+    "\n",
+    "# *******\n",
+    "#it will tell every function related to a data structure of any thing just\n",
+    "#put the type of variable in it\n",
+    "dir(lists)"
    ],
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "GiPBno4ZgSKy",
-    "outputId": "1329d089-4040-4076-b425-bddde8d1a527"
+    "outputId": "1329d089-4040-4076-b425-bddde8d1a527",
+    "ExecuteTime": {
+     "end_time": "2025-06-21T05:37:35.101942Z",
+     "start_time": "2025-06-21T05:37:35.093879Z"
+    }
    },
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 'Sachin', 'Goyal', 3.14] <class 'list'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__class_getitem__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__imul__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__reversed__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'append',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'count',\n",
+       " 'extend',\n",
+       " 'index',\n",
+       " 'insert',\n",
+       " 'pop',\n",
+       " 'remove',\n",
+       " 'reverse',\n",
+       " 'sort']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
